argo/apps/syc-web-backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syc-web-deployment
  namespace: syc
spec:
  selector:
    matchLabels:
      app: syc-web
  template:
    metadata:
      labels:
        app: syc-web
    spec:
      imagePullSecrets:
        - name: syc-kubernetes-registry-credentials
      containers:
        - name: syc-web
          image: registry.digitalocean.com/dmn-kubernetes-registry/syc-web-backend:latest
          ports:
          - containerPort: 80
